// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Snapshot renders successfully 1`] = `
<body>
  <div>
    <div
      style="display: none;"
    >
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
      >
        <button
          aria-label="Choose date, selected date is 11 Mar 2022"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CalendarIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <input
        placeholder="dd/mm/yyyy"
        type="tel"
        value="11/03/2022"
      />
    </div>
    <div
      class="css-n89q8k"
    >
      <button
        aria-label="Date Picker"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CalendarMonthIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zM9 14H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm-8 4H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        >
          <span
            class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
            style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    class="MuiPickersPopper-root css-1anqmj6-MuiPopper-root-MuiPickersPopper-root MuiPopperUnstyled-root"
    data-popper-escaped=""
    data-popper-placement="bottom"
    data-popper-reference-hidden=""
    role="dialog"
    style="position: absolute; top: 0px; left: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiPickersPopper-paper css-1yllih9-MuiPaper-root-MuiPickersPopper-paper"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiCalendarOrClockPicker-root css-1vcokmn-MuiCalendarOrClockPicker-root"
      >
        <div
          class="css-epd502"
        >
          <div
            class="MuiCalendarPicker-root css-169iwlq-MuiCalendarPicker-root"
          >
            <div
              class="MuiPickersCalendarHeader-root css-nk89i7-MuiPickersCalendarHeader-root"
            >
              <div
                aria-live="polite"
                class="MuiPickersCalendarHeader-labelContainer css-10fao8b-MuiPickersCalendarHeader-labelContainer"
                role="presentation"
              >
                <div
                  class="MuiPickersFadeTransitionGroup-root css-31ca4x-MuiPickersFadeTransitionGroup-root"
                >
                  <div
                    class="MuiPickersCalendarHeader-label css-dplwbx-MuiPickersCalendarHeader-label"
                    id=":r0:-grid-label"
                    style="opacity: 1;"
                  >
                    March 2022
                  </div>
                </div>
                <button
                  aria-label="calendar view is open, switch to year view"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiPickersCalendarHeader-switchViewButton css-12mkn7b-MuiButtonBase-root-MuiIconButton-root-MuiPickersCalendarHeader-switchViewButton"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPickersCalendarHeader-switchViewIcon css-1tkx1wf-MuiSvgIcon-root-MuiPickersCalendarHeader-switchViewIcon"
                    data-testid="ArrowDropDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <div
                class="MuiPickersArrowSwitcher-root css-9reuh9-MuiPickersArrowSwitcher-root"
                style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              >
                <button
                  aria-label="Previous month"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeSmall MuiPickersArrowSwitcher-button css-1ae9t7h-MuiButtonBase-root-MuiIconButton-root-MuiPickersArrowSwitcher-button"
                  tabindex="0"
                  title="Previous month"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowLeftIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="MuiPickersArrowSwitcher-spacer css-xb7uwb-MuiPickersArrowSwitcher-spacer"
                />
                <button
                  aria-label="Next month"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeStart MuiIconButton-sizeSmall MuiPickersArrowSwitcher-button css-jro82b-MuiButtonBase-root-MuiIconButton-root-MuiPickersArrowSwitcher-button"
                  tabindex="0"
                  title="Next month"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiPickersFadeTransitionGroup-root MuiCalendarPicker-viewTransitionContainer css-15dbmtb-MuiPickersFadeTransitionGroup-root-MuiCalendarPicker-viewTransitionContainer"
            >
              <div
                style="opacity: 1;"
              >
                <div
                  aria-labelledby=":r0:-grid-label"
                  role="grid"
                >
                  <div
                    class="MuiDayPicker-header css-qklzlb-MuiDayPicker-header"
                    role="row"
                  >
                    <span
                      aria-label="Monday"
                      class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                      role="columnheader"
                    >
                      M
                    </span>
                    <span
                      aria-label="Tuesday"
                      class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                      role="columnheader"
                    >
                      T
                    </span>
                    <span
                      aria-label="Wednesday"
                      class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                      role="columnheader"
                    >
                      W
                    </span>
                    <span
                      aria-label="Thursday"
                      class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                      role="columnheader"
                    >
                      T
                    </span>
                    <span
                      aria-label="Friday"
                      class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                      role="columnheader"
                    >
                      F
                    </span>
                    <span
                      aria-label="Saturday"
                      class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                      role="columnheader"
                    >
                      S
                    </span>
                    <span
                      aria-label="Sunday"
                      class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                      role="columnheader"
                    >
                      S
                    </span>
                  </div>
                  <div
                    class="PrivatePickersSlideTransition-root MuiDayPicker-slideTransition css-sf5t6v-PrivatePickersSlideTransition-root-MuiDayPicker-slideTransition"
                    role="presentation"
                  >
                    <div
                      class="MuiDayPicker-monthContainer css-6t5f1e-MuiDayPicker-monthContainer"
                      role="rowgroup"
                    >
                      <div
                        class="MuiDayPicker-weekContainer css-ghi3gg-MuiDayPicker-weekContainer"
                        role="row"
                      >
                        <div
                          class="MuiPickersDay-root MuiPickersDay-dayWithMargin MuiPickersDay-hiddenDaySpacingFiller MuiPickersDay-hiddenDaySpacingFiller css-ggw2de-MuiPickersDay-root"
                          role="gridcell"
                        />
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          1
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          2
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          3
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          4
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          5
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          6
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <div
                        class="MuiDayPicker-weekContainer css-ghi3gg-MuiDayPicker-weekContainer"
                        role="row"
                      >
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          7
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          8
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          9
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          10
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="true"
                          class="MuiButtonBase-root MuiPickersDay-root Mui-selected MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="0"
                          type="button"
                        >
                          11
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          12
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          13
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <div
                        class="MuiDayPicker-weekContainer css-ghi3gg-MuiDayPicker-weekContainer"
                        role="row"
                      >
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          14
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          15
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          16
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          17
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          18
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          19
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          20
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <div
                        class="MuiDayPicker-weekContainer css-ghi3gg-MuiDayPicker-weekContainer"
                        role="row"
                      >
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          21
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          22
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          23
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          24
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          25
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          26
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          27
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <div
                        class="MuiDayPicker-weekContainer css-ghi3gg-MuiDayPicker-weekContainer"
                        role="row"
                      >
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          28
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          29
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          30
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-selected="false"
                          class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                          role="gridcell"
                          tabindex="-1"
                          type="button"
                        >
                          31
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="MuiPickersDay-root MuiPickersDay-dayWithMargin MuiPickersDay-hiddenDaySpacingFiller MuiPickersDay-hiddenDaySpacingFiller css-ggw2de-MuiPickersDay-root"
                          role="gridcell"
                        />
                        <div
                          class="MuiPickersDay-root MuiPickersDay-dayWithMargin MuiPickersDay-hiddenDaySpacingFiller MuiPickersDay-hiddenDaySpacingFiller css-ggw2de-MuiPickersDay-root"
                          role="gridcell"
                        />
                        <div
                          class="MuiPickersDay-root MuiPickersDay-dayWithMargin MuiPickersDay-hiddenDaySpacingFiller MuiPickersDay-hiddenDaySpacingFiller css-ggw2de-MuiPickersDay-root"
                          role="gridcell"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`DatePicker Snapshot when static renders successfully 1`] = `
<body>
  <div>
    <div
      class="MuiPickerStaticWrapper-root css-u0soqy-MuiPickerStaticWrapper-root"
    >
      <div
        class="MuiPickerStaticWrapper-content css-xelq0e-MuiPickerStaticWrapper-content"
      >
        <div
          class="MuiCalendarOrClockPicker-root css-1vcokmn-MuiCalendarOrClockPicker-root"
        >
          <div
            class="css-epd502"
          >
            <div
              class="MuiCalendarPicker-root css-169iwlq-MuiCalendarPicker-root"
            >
              <div
                class="MuiPickersCalendarHeader-root css-nk89i7-MuiPickersCalendarHeader-root"
              >
                <div
                  aria-live="polite"
                  class="MuiPickersCalendarHeader-labelContainer css-10fao8b-MuiPickersCalendarHeader-labelContainer"
                  role="presentation"
                >
                  <div
                    class="MuiPickersFadeTransitionGroup-root css-31ca4x-MuiPickersFadeTransitionGroup-root"
                  >
                    <div
                      class="MuiPickersCalendarHeader-label css-dplwbx-MuiPickersCalendarHeader-label"
                      id=":r1:-grid-label"
                      style="opacity: 1;"
                    >
                      March 2022
                    </div>
                  </div>
                  <button
                    aria-label="calendar view is open, switch to year view"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiPickersCalendarHeader-switchViewButton css-12mkn7b-MuiButtonBase-root-MuiIconButton-root-MuiPickersCalendarHeader-switchViewButton"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPickersCalendarHeader-switchViewIcon css-1tkx1wf-MuiSvgIcon-root-MuiPickersCalendarHeader-switchViewIcon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="MuiPickersArrowSwitcher-root css-9reuh9-MuiPickersArrowSwitcher-root"
                  style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
                >
                  <button
                    aria-label="Previous month"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeSmall MuiPickersArrowSwitcher-button css-1ae9t7h-MuiButtonBase-root-MuiIconButton-root-MuiPickersArrowSwitcher-button"
                    tabindex="0"
                    title="Previous month"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="ArrowLeftIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                  <div
                    class="MuiPickersArrowSwitcher-spacer css-xb7uwb-MuiPickersArrowSwitcher-spacer"
                  />
                  <button
                    aria-label="Next month"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeStart MuiIconButton-sizeSmall MuiPickersArrowSwitcher-button css-jro82b-MuiButtonBase-root-MuiIconButton-root-MuiPickersArrowSwitcher-button"
                    tabindex="0"
                    title="Next month"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="ArrowRightIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiPickersFadeTransitionGroup-root MuiCalendarPicker-viewTransitionContainer css-15dbmtb-MuiPickersFadeTransitionGroup-root-MuiCalendarPicker-viewTransitionContainer"
              >
                <div
                  style="opacity: 1;"
                >
                  <div
                    aria-labelledby=":r1:-grid-label"
                    role="grid"
                  >
                    <div
                      class="MuiDayPicker-header css-qklzlb-MuiDayPicker-header"
                      role="row"
                    >
                      <span
                        aria-label="Monday"
                        class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                        role="columnheader"
                      >
                        M
                      </span>
                      <span
                        aria-label="Tuesday"
                        class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                        role="columnheader"
                      >
                        T
                      </span>
                      <span
                        aria-label="Wednesday"
                        class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                        role="columnheader"
                      >
                        W
                      </span>
                      <span
                        aria-label="Thursday"
                        class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                        role="columnheader"
                      >
                        T
                      </span>
                      <span
                        aria-label="Friday"
                        class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                        role="columnheader"
                      >
                        F
                      </span>
                      <span
                        aria-label="Saturday"
                        class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                        role="columnheader"
                      >
                        S
                      </span>
                      <span
                        aria-label="Sunday"
                        class="MuiTypography-root MuiTypography-caption MuiDayPicker-weekDayLabel css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel"
                        role="columnheader"
                      >
                        S
                      </span>
                    </div>
                    <div
                      class="PrivatePickersSlideTransition-root MuiDayPicker-slideTransition css-sf5t6v-PrivatePickersSlideTransition-root-MuiDayPicker-slideTransition"
                      role="presentation"
                    >
                      <div
                        class="MuiDayPicker-monthContainer css-6t5f1e-MuiDayPicker-monthContainer"
                        role="rowgroup"
                      >
                        <div
                          class="MuiDayPicker-weekContainer css-ghi3gg-MuiDayPicker-weekContainer"
                          role="row"
                        >
                          <div
                            class="MuiPickersDay-root MuiPickersDay-dayWithMargin MuiPickersDay-hiddenDaySpacingFiller MuiPickersDay-hiddenDaySpacingFiller css-ggw2de-MuiPickersDay-root"
                            role="gridcell"
                          />
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            1
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            2
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            3
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            4
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            5
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            6
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiDayPicker-weekContainer css-ghi3gg-MuiDayPicker-weekContainer"
                          role="row"
                        >
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            7
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            8
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            9
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            10
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="true"
                            class="MuiButtonBase-root MuiPickersDay-root Mui-selected MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="0"
                            type="button"
                          >
                            11
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            12
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            13
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiDayPicker-weekContainer css-ghi3gg-MuiDayPicker-weekContainer"
                          role="row"
                        >
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            14
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            15
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            16
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            17
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            18
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            19
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            20
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiDayPicker-weekContainer css-ghi3gg-MuiDayPicker-weekContainer"
                          role="row"
                        >
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            21
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            22
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            23
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            24
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            25
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            26
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            27
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiDayPicker-weekContainer css-ghi3gg-MuiDayPicker-weekContainer"
                          role="row"
                        >
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            28
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            29
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            30
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <button
                            aria-selected="false"
                            class="MuiButtonBase-root MuiPickersDay-root MuiPickersDay-dayWithMargin css-bkrceb-MuiButtonBase-root-MuiPickersDay-root"
                            role="gridcell"
                            tabindex="-1"
                            type="button"
                          >
                            31
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                          <div
                            class="MuiPickersDay-root MuiPickersDay-dayWithMargin MuiPickersDay-hiddenDaySpacingFiller MuiPickersDay-hiddenDaySpacingFiller css-ggw2de-MuiPickersDay-root"
                            role="gridcell"
                          />
                          <div
                            class="MuiPickersDay-root MuiPickersDay-dayWithMargin MuiPickersDay-hiddenDaySpacingFiller MuiPickersDay-hiddenDaySpacingFiller css-ggw2de-MuiPickersDay-root"
                            role="gridcell"
                          />
                          <div
                            class="MuiPickersDay-root MuiPickersDay-dayWithMargin MuiPickersDay-hiddenDaySpacingFiller MuiPickersDay-hiddenDaySpacingFiller css-ggw2de-MuiPickersDay-root"
                            role="gridcell"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
